kind-1/frontend-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  labels:
    app: acmefit
    service: frontend
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: mkcert-root-ca
spec:
  tls:
    - secretName: frontend-tls
      hosts:
        - frontend-acme-fitness.local.cna-demo.ga
  rules:
    - host: frontend-acme-fitness.local.cna-demo.ga
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: frontend
                port: 
                  name: http-frontend

---
