kind-1/pos-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pos
  labels:
    app: acmefit
    service: pos
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: mkcert-root-ca
spec:
  tls:
    - secretName: pos-tls
      hosts:
        - pos-acme-fitness.local.cna-demo.ga
  rules:
    - host: pos-acme-fitness.local.cna-demo.ga
      http:
        paths:
          - path: / 
            pathType: Prefix
            backend:
              service:
                name: pos
                port: 
                  name: http-pos

---
apiVersion: v1
kind: Service
metadata:
  name: pos
  labels:
    app: acmefit
    service: pos
spec:
  ports:
    - name: http-pos
      protocol: TCP
      port: 7777
      targetPort: 7777
  selector:
    app: acmefit
    service: pos
